<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".forgot_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/f_email"
                android:layout_width="108dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="76dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="225dp"
                android:text="Email Address"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/f_enter_email"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:paddingLeft="20dp"
                android:hint="Enter email address"
                android:layout_below="@+id/f_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/f_user_number"
                android:layout_width="183dp"
                android:layout_height="27dp"
                android:layout_below="@+id/f_role"
                android:layout_alignStart="@+id/f_email"
                android:layout_alignEnd="@+id/f_email"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-71dp"
                android:text="Student number"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/f_enter_number"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/f_user_number"
                android:hint="Enter student number"
                android:paddingLeft="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_enter_number"
                android:layout_alignStart="@+id/f_user_number"
                android:layout_alignEnd="@+id/f_user_number"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="-8dp"
                android:text="New password"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/f_reset_password"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/reset_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:hint="Enter new password"
                android:paddingLeft="20dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/f_confirm_password"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_reset_password"
                android:layout_alignStart="@+id/reset_password"
                android:layout_alignEnd="@+id/reset_password"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="-11dp"
                android:text="Confirm new password"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/f_enter_corfirm_password"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/f_confirm_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:hint="Confirm new password"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/f_enter_corfirm_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:onClick="after_reset"
                android:layout_marginBottom="33dp"
                android:textSize="18dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="Reset Password"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/f_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f_enter_email"
                android:layout_alignParentStart="true"
                android:popupBackground="@drawable/logo_background"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="75dp"
                />

            <TextView
                android:id="@+id/login_button_f"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/reset_button"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="33dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:onClick="back_to_login"
                android:text="Back to login"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/login_button"
                android:layout_alignTop="@+id/login_button"
                android:layout_alignEnd="@+id/login_button"
                android:layout_alignBottom="@+id/login_button"
                android:layout_marginStart="39dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="188dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/back_icon" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>