...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="325dp"
                android:layout_marginEnd="248dp"
                android:text="User number"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/user_number"
                android:layout_width="317dp"
...
